# cloudsmith-cs-interview-candidate-test

./: README.md  REPORT.md  pyproject.toml
.github/workflows/: build_package.yml  promote_package.yml  release_package.yml
src/example_package/: __init__.py  example.py
